<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/folder_list"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#616161"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/viewModeButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:text="@string/viewMode"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/restoreButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/restore"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/selectAllButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/select"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:text="@string/reload"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clearSelectionButton"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="18dp"
            android:text="@string/del"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/moveButton"
            style="?android:attr/buttonBarStyle"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="15.25dp"
            android:text="@string/move"
            android:textAlignment="center"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/backupButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="18dp"
            android:text="@string/backup"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/vaultButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="15.25dp"
            android:text="@string/lock"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>