<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="18dp"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Reserved for future reference use -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordingFormat"
        android:textColor="#388E3C" />

    <Spinner
        android:id="@+id/spinnerFormat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/audioSource"
        android:textColor="#388E3C" />

    <Spinner
        android:id="@+id/spinnerSource"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notifyMode"
        android:textColor="#388E3C" />

    <Spinner
        android:id="@+id/spinnerNotificationMode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/startPlayback"
        android:textColor="#388E3C" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchUseExternalPlayer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/externalPlayer"
        android:textColor="#388E3C"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchEnableRoot"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/enableRoot"
        android:textColor="#388E3C"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchOverlayEnabled"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/enableOverlay"
        android:textColor="#388E3C"
        tools:ignore="VisualLintButtonSize" />

    <!--
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/autoRecording"
        android:textAlignment="center"
        tools:ignore="VisualLintButtonSize" />

    <SeekBar
        android:id="@+id/slidingDrawer"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/noRecording"
        android:textAlignment="center"
        tools:ignore="VisualLintButtonSize" />
    -->
</LinearLayout>
