<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:text="@string/folder_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#616161"
        android:textStyle="bold"
        android:padding="10dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp">

        <Button
            android:id="@+id/selectAllButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:textSize="11sp"
            android:textAlignment="center"
            android:text="@string/select"
            android:layout_marginStart="30dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/invertButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:textSize="11sp"
            android:textAlignment="center"
            android:text="@string/invert"
            android:layout_marginStart="16.5dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:textSize="11sp"
            android:textAlignment="center"
            android:text="@string/clear"
            android:layout_marginStart="16.5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foldersRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:text="@string/store"
            android:textSize="11sp"
            android:textAlignment="center"
            android:layout_marginStart="18dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:text="@string/cancel"
            android:textSize="11sp"
            android:textAlignment="center"
            android:layout_marginStart="18dp"
        android:layout_marginBottom="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>

